--- a/testeproj/index.html
+++ b/testeproj/index.html
@@ -14,7 +14,7 @@
     <div class="bolha" style="left: 50%; animation-duration: 7s;"></div>
     <div class="bolha" style="left: 70%; animation-duration: 5s;"></div>
     <div class="bolha" style="left: 90%; animation-duration: 6s;"></div>
-
+    
     <header>
         <h1>Sistema Educacional de Informática Avançada</h1>
     </header>
@@ -22,7 +22,7 @@
         <nav>
             <a href="#sobre">Sobre Nós</a>
             <a href="#catalogo">Catálogo</a>
-            <a href="#entrar">Entrar</a>
+            <a href="login.html">Entrar</a>
         </nav>
     </section>
 
@@ -127,8 +127,7 @@
         <div class="curso">
             <p>Dados são o novo petróleo, e os cientistas de dados são os engenheiros dessa revolução! No curso de
                 <strong>Ciência de Dados</strong>, você vai aprender a coletar, processar e analisar grandes volumes de
-                informação para extrair insights valiosos.
-            </p>
+                informação para extrair insights valiosos.</p>
             <p>Com <strong>Python, Pandas, NumPy e Matplotlib</strong>, você desenvolverá análises estatísticas e
                 visualizações poderosas. Além disso, estudará <strong>machine learning e big data</strong>, permitindo
                 criar previsões e otimizar decisões em diversas áreas.</p>
@@ -137,23 +136,7 @@
         </div>
     </section>
 
-
-
-
-
-    <section id="entrar">
-        <h2 id="titulo-entrar">Entrar</h2>
-        <form action="segunda_pagina.html" method="get">
-                <input input type="email" id="email" name="email" placeholder="Digite seu email" required>
-                <input type="Password" id="Password" name="Password" placeholder="Crie uma senha" required>
-                <button>Enviar</button>
-
-           
-        </form>
-    </section>
-
-
-    <section class="rodape">
+    <section id="rodape">
         <footer>
             <div class="footer-container">
                 <div class="footer-section">
